--- a/insciptionhabani.html
+++ b/insciptionhabani.html
@@ -18,9 +18,11 @@
             background-color: white;
             padding: 20px;
             border-radius: 5px;
+
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
             width: 300px;
             text-align: center;
+
         }
         h2 {
             color: #333;
@@ -33,6 +35,8 @@
             margin: 10px 0;
             border: 1px solid #ccc;
             border-radius: 5px;
+            max-width: 200px;
+
         }
         .button {
             background-color: #007bff;
